estructura con los datos de contacto

--- a/contacto.html
+++ b/contacto.html
@@ -17,6 +17,11 @@
     </header>
     <main>
         <h1>Contacto</h1>
+        <hr>
+        <ul>
+            <li>Email: <a href="mailtojjm@gmail.com">jj@gmail.com</a></li>
+            <li>Teléfono: <a href="tel:666555888">666555888</a></li>
+        </ul>
     </main>
     <footer>
         Copyright&copy;2023
